<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.ReminderActivity" android:background="@color/colorBackground">


    <TextView
            android:text="@string/var_release_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp" android:layout_marginStart="20dp"
            android:textColor="@color/colorPrimaryDark"/>
    <TextView
            android:text="@string/var_release_reminder_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp" android:layout_marginStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/swReleaseReminder" android:layout_marginEnd="20dp"/>

    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:background="@color/colorPrimaryDark"
          android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
          app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
          android:id="@+id/view"></View>

    <TextView
            android:text="@string/var_daily_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/view" android:layout_marginTop="10dp"/>
    <TextView
            android:text="@string/var_daily_reminder_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/swDailyReminder" android:layout_marginEnd="20dp"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swReleaseReminder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="20dp"
    />
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swDailyReminder"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
    />
</android.support.constraint.ConstraintLayout>