<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_height="match_parent"
            android:layout_width="match_parent" android:id="@+id/scrollView2"
            android:background="@color/colorBackground">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.activity.MovieDetailActivity"
            android:id="@+id/clDetailMovie">

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pbDetail"
                app:layout_constraintEnd_toStartOf="@+id/cvDetailDesc"
                app:layout_constraintStart_toEndOf="@+id/cvDetailDesc" app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="300dp"
                app:cardElevation="10dp"
                android:fadingEdgeLength="5dp"
                app:cardCornerRadius="5dp"
                android:id="@+id/cvDetailDesc" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="50dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_margin="5dp">

                <TextView
                        android:id="@+id/tvDetailTxYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/var_year"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="5dp" android:layout_marginTop="60dp"
                        app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                        android:id="@+id/tvDetailYear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="60dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvDetailTxYear" android:layout_marginStart="90dp"/>

                <TextView
                        android:id="@+id/tvDetailTxLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/var_language"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/tvDetailYear" android:layout_marginStart="5dp"/>

                <TextView
                        android:id="@+id/tvDetailLanguage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
                        app:layout_constraintTop_toBottomOf="@+id/tvDetailYear" android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="@+id/tvDetailTxLanguage"
                        android:layout_marginStart="90dp"/>


                <TextView
                        android:id="@+id/tvDetailTxOverview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/var_overview"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:background="@drawable/shape_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/tvDetailLanguage"/>

                <TextView
                        android:id="@+id/tvDetailOverview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center|fill|fill_horizontal|fill_vertical"
                        android:textAlignment="gravity"
                        android:layout_below="@+id/tvDetailTxOverview"
                        app:layout_constraintTop_toBottomOf="@+id/tvDetailTxOverview"
                        android:layout_marginTop="5dp" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp" app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="5dp"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:id="@+id/cvDetailImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:cardElevation="10dp"
                android:layout_marginTop="50dp"
                app:cardBackgroundColor="@android:color/transparent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent">

            <android.support.constraint.ConstraintLayout android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/tvDetailRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:elevation="25dp"
                        android:background="@drawable/shape_rate"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/ivDetailIcon" android:padding="10dp"/>

                <ImageView
                        android:layout_width="200dp"
                        android:layout_height="300dp"
                        app:srcCompat="@mipmap/ic_launcher"
                        android:scaleType="fitXY"
                        android:id="@+id/ivDetailIcon" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:padding="5dp" android:layout_marginEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</ScrollView>